--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "autoprefixer": "^10.4.12",
+    "gh-pages": "^4.0.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   },
   "homepage": "https://joseperu2503.github.io/todo-app"
 }
